Fix modal WIDTH const on modal js module to get all widths, adjust modal witdh to 100vw on mobile

--- a/styles/media/max767.sass
+++ b/styles/media/max767.sass
@@ -82,6 +82,20 @@
   .play__grid-modal-slider-progress-bar-wrapper
     height: 7px
     width: 25px
+  .play__grid-modal-slide-wrapper
+    padding-top: 8%
+    padding-bottom: 8%
+    margin-right: -400vw
+    margin-left: 0
+    transform: translateX(0)
+    transition: transform 0.6s cubic-bezier(0.445,0.05,0.55,0.95)
+  .play__grid-modal-slide
+    font-size: 0
+    margin-right: 0
+    display: inline-block
+    width: 100vw
+    height: 100%
+
 
   .peripherals
     background-color: rgb(255, 196, 31)
